# python-webgeocalc

./: .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  .zenodo.json  LICENSE.md  README.rst  docs-requirements.txt  meta.yaml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: actions.yml  release.yml
docs/: Makefile  api.rst  calculation.rst  cli.rst  conf.py  index.rst  params.rst  requirements.txt
examples/: api.ipynb  calculation.ipynb  cli.ipynb
recipe/: deploy.sh  meta.yaml
tests/: __init__.py  requirements.txt  test_angular_separation.py  test_angular_size.py  test_api.py  test_calculation.py  test_calculation_run.py  test_cli.py  test_decorator.py  test_direction.py  test_frame_transformation.py  test_gf_coordinate_search.py  test_gf_errors.py  test_illumination_angles.py  test_osculating_elements.py  test_payload.py  test_phase_angle.py  test_pointing_direction.py  test_state_vector.py  test_sub_observer_point.py  test_sub_solar_point.py  test_surface_intercept_point.py  test_tangent_point.py  test_time_conversion.py  test_types.py  test_vars.py
webgeocalc/: __init__.py  api.py  calculation.py  calculation_types.py  cli.py  decorator.py  direction.py  errors.py  payload.py  types.py  vars.py  version.py
