[metadata]
name = webgeocalc
author = Benoit Seignovert
author-email = benoit.a.seignovert@jpl.nasa.gov
summary = Python package for NAIF WebGeoCalc API
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/seignovert/python-webgeocalc
license = MIT
keywords = naif, webgeocalc, api
classifier = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Astronomy

[files]
packages =
    webgeocalc

[bdist_wheel]
universal = 1

[coverage:report]
exclude_lines =
    def __repr__
