[metadata]
name = webgeocalc
author = Benoit Seignovert
author-email = benoit.a.seignovert@jpl.nasa.gov
summary = Python package for NAIF WebGeoCalc API
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
project_urls = 
    Documentation = https://webgeocalc.readthedocs.io/
    TravisCI = https://travis-ci.org/seignovert/python-webgeocalc
    Coverage = https://coveralls.io/github/seignovert/python-webgeocalc
    Source Code = https://github.com/seignovert/python-webgeocalc
    Bug Tracker = https://github.com/seignovert/python-webgeocalc/issues
license = MIT
keywords = naif, webgeocalc, api
classifier = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Astronomy

[files]
packages =
    webgeocalc

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --verbose

[coverage:report]
show_missing = True
fail_under = 100
exclude_lines =
    def __repr__

[flake8]
max-line-length = 90
ignore = E302, D300, D105, D107, D401

[entry_points]
console_scripts =
    wgc-kernels = webgeocalc.cli:cli_kernel_sets
    wgc-bodies = webgeocalc.cli:cli_bodies
    wgc-frames = webgeocalc.cli:cli_frames
    wgc-instruments = webgeocalc.cli:cli_instruments