[metadata]
name = webgeocalc
author = Benoit Seignovert
author-email = benoit.a.seignovert@jpl.nasa.gov
summary = Python package for NAIF WebGeoCalc API
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
project_urls = 
    Conda = https://anaconda.org/seignovert/webgeocalc
    Bug Tracker = https://github.com/seignovert/python-webgeocalc/issues
    Code coverage = https://coveralls.io/github/seignovert/python-webgeocalc
    Travis CI = https://travis-ci.org/seignovert/python-webgeocalc
    Source Code = https://github.com/seignovert/python-webgeocalc
    Documentation = https://webgeocalc.readthedocs.io/
license = MIT
keywords = naif, webgeocalc, api
classifier = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Astronomy

[files]
packages =
    webgeocalc

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --verbose

[coverage:report]
show_missing = True
fail_under = 100
exclude_lines =
    def __repr__

[flake8]
max-line-length = 90
ignore = E302, D300, D105, D107, D401

[entry_points]
console_scripts =
    wgc-kernels = webgeocalc.cli:cli_kernel_sets
    wgc-bodies = webgeocalc.cli:cli_bodies
    wgc-frames = webgeocalc.cli:cli_frames
    wgc-instruments = webgeocalc.cli:cli_instruments
    wgc-calculation = webgeocalc.cli:cli_calculation
    wgc-state-vector = webgeocalc.cli:cli_state_vector
    wgc-angular-separation = webgeocalc.cli:cli_angular_separation
    wgc-angular-size = webgeocalc.cli:cli_angular_size
    wgc-frame-transformation = webgeocalc.cli:cli_frame_transformation
    wgc-illumination-angles = webgeocalc.cli:cli_illumination_angles
    wgc-subsolar-point = webgeocalc.cli:cli_subsolar_point
    wgc-subobserver-point = webgeocalc.cli:cli_subobserver_point
    wgc-surface-intercept-point = webgeocalc.cli:cli_surface_intercept_point
    wgc-osculating-elements = webgeocalc.cli:cli_osculating_elements
    wgc-time-conversion = webgeocalc.cli:cli_time_conversion
